[routerLink] の使いどころ

--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <p>
   product-list works!
 </p>
-<div class="button" [routerLink]="['/products', 'test']">
+<div class="button" [routerLink]="['/products', id]">
   商品詳細へ
 </div>
