商品一覧ページに商品取得中の表示を実装

--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,6 +1,8 @@
-<p>
-  product-list works!
-</p>
-<div class="button" [routerLink]="['/products', id]">
-  商品詳細へ
+<div class="container">
+  <div class="title">商品一覧</div>
+  <div class="product-list-container">
+    <div class="waiting-for-products">
+      商品を取得しています...
+    </div>
+  </div>
 </div>
