--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -1,3 +1,24 @@
-<p>
-  product-edit works!
-</p>
+<div class="container">
+  <div class="title">商品編集</div>
+  <form class="edit-form">
+    <div class="edit-line">
+      <label>ID</label>
+      <span>1</span>
+    </div>
+    <div class="edit-line">
+      <label>名前</label>
+      <input type="text">
+    </div>
+    <div class="edit-line">
+      <label>価格</label>
+      <input type="number">
+    </div>
+    <div class="edit-line">
+      <label>説明</label>
+      <input type="text">
+    </div>
+  </form>
+  <div class="footer">
+    <div class="button black" routerLink="/products">保存</div>
+  </div>
+</div>
