編集ページでクリックを利用する

--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -19,6 +19,6 @@
     </div>
   </form>
   <div class="footer">
-    <div class="button black" routerLink="/products">保存</div>
+    <div class="button black" (click)="saveProduct()">保存</div>
   </div>
 </div>
