商品一覧から、詳細画面への遷移を追加

--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -11,10 +11,13 @@
           <div class="product-name">名前</div>
           <div class="product-price">価格</div>
         </div>
-        <div class="product-line" *ngFor="let product of products">
+        <div class="product-line" *ngFor="let product of products" (mouseenter)="hovered(product)" (mouseleave)="unhovered(product)">
           <div class="product-id">{{ product.id }} </div>
           <div class="product-name">{{ product.name }}</div>
-          <div class="product-price">{{ product.price }}</div>
+          <div class="product-price">
+            <span *ngIf="!product.hovered; else Unhovered">{{ product.price }}</span>
+            <ng-template #Unhovered><span class="button white" [routerLink]="[product.id]">詳細</span></ng-template>
+          </div>
         </div>
       </div>
     </ng-template>
