詳細画面から編集画面への遷移、編集画面から詳細画面への遷移を追加

--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -19,6 +19,7 @@
     </div>
   </div>
   <div class="footer">
-    <div class="button black" routerLink="/products">商品一覧へ</div>
+    <div class="button white" routerLink="/products">商品一覧</div>
+    <div class="button black" routerLink="edit">編集</div>
   </div>
 </div>
