--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -20,6 +20,7 @@
       </div>
     </div>
     <div class="footer">
+      <span class="button white" [routerLink]="['/products', product.id]">キャンセル</span>
       <button class="button black">保存</button>
     </div>
   </form>
