編集画面に他のバリデーションを追加してみる

--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -9,15 +9,22 @@
       <div class="edit-line">
         <label>名前</label>
         <div>
-          <input id="name" type="text" formControlName="name" required>
+          <input id="name" type="text" formControlName="name" required maxlength="50">
           <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert">
             <div *ngIf="name.errors.required">入力してください</div>
+            <div *ngIf="name.errors.maxlength">50文字以内で入力してください</div>
           </div>
         </div>
       </div>
       <div class="edit-line">
         <label>価格</label>
-        <input type="number" formControlName="price">
+        <div>
+          <input type="number" formControlName="price" required>
+          <div *ngIf="price.invalid && (price.dirty || price.touched)" class="alert">
+            <div *ngIf="price.errors.required">入力してください</div>
+            <div *ngIf="price.errors.min">100円以上を入力してください</div>
+          </div>
+        </div>
       </div>
       <div class="edit-line">
         <label>説明</label>
