--- a/src/app/product/product-edit/product-edit.component.scss
+++ b/src/app/product/product-edit/product-edit.component.scss
@@ -51,6 +51,11 @@
 
     .button {
       margin: 0 20px;
+
+      &.disabled {
+        background-color: #B0BEC5;
+        pointer-events: none;
+      }
     }
   }
 }
