--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -3,8 +3,8 @@
   <form (ngSubmit)="saveProduct()" [formGroup]="productForm">
     <div class="edit-form">
       <div class="edit-line">
-        <label>ID</label>
-        <span>{{ productForm.controls.id.value }}</span>
+        <label>Key</label>
+        <span>{{ productForm.controls.key.value }}</span>
       </div>
       <div class="edit-line">
         <label>名前</label>
