商品作成画面への導線を追加

--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -20,6 +20,9 @@
           </div>
         </div>
       </div>
+      <div class="footer">
+        <button class="button black" routerLink="/products/new">商品を追加する</button>
+      </div>
     </ng-template>
   </div>
 </div>
