--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="footer">
-      <span class="button white" [routerLink]="['/products', productForm.controls.id.value]">キャンセル</span>
+      <span class="button white" [routerLink]="['/products', productForm.controls.key.value]">キャンセル</span>
       <button class="button black" [class.disabled]="productForm.invalid">保存</button>
     </div>
   </form>
